# pySMESH

./: .gitignore  CMakeLists.txt  NOTICE.md  PROVENANCE.md  README.md  prepare.py  pyproject.toml
.github/workflows/: ci.yml
ci/: check_vtk_pin.py  check_wheel.py  environment.yml
cmake/Geom/: CMakeLists.txt
cmake/Kernel/: CMakeLists.txt
cmake/SMESH/: CMakeLists.txt
docs/: B0.md  B1.md  B2.md  B3.md  B4.md  C1.md  plan.md
docs/upstream_notes/: ProxyMesh_notes.md  SMESHDS_Mesh_notes.md  ViscousLayers_notes.md
examples/: box_bl.py  split_box_unify.py
patches/kernel/: Kernel.patch
patches/occt8/: 0003-boost-regex-str-enum.patch  0004-occt-8.0-compat.patch
patches/smesh/: SMESH_Mesh.patch
src/bindings/: classify.cpp  common.hpp  distance.cpp  mesh.cpp  module.cpp  offset.cpp  shape.cpp  step_xde.cpp  tessellate.cpp  unify.cpp  viscous.cpp
src/pysmesh/: __init__.py  _build_info.py.in  _core.pyi  classify.py  distance.py  offset.py  step.py  tessellate.py  unify.py  viscous.py
tests/: conftest.py  test_build_info.py  test_classify.py  test_distance.py  test_hello_smeshds.py  test_mesh_injection.py  test_offset.py  test_shape.py  test_step.py  test_tessellate.py  test_unify.py  test_viscous_layers.py
tests/fixtures/: box.brep  box_far.brep  cylinder.brep  generate_fixtures.cpp  named_box_m.step  named_box_mm.step  open_box_shell.brep  sphere.brep  split_box.brep
tests/fixtures/box_mesh/: edge_ids.npy  edge_node_ids.npy  edge_t.npy  face_ids.npy  face_node_ids.npy  face_uv.npy  nodes.npy  segment_edge_ids.npy  segments.npy  tri_face_ids.npy  tris.npy  vertex_ids.npy  vertex_node_ids.npy
tests/fixtures/sphere_mesh/: edge_ids.npy  edge_node_ids.npy  edge_t.npy  face_ids.npy  face_node_ids.npy  face_uv.npy  nodes.npy  segment_edge_ids.npy  segments.npy  tri_face_ids.npy  tris.npy  vertex_ids.npy  vertex_node_ids.npy
